🔧 ECO-Λ: Deployment fixes - Favicon + Router navigation. Features: Added Solaria isotipo as favicon.ico, Fixed index.html title and meta tags, Migrated href navigation to React Router Link components, Added Netlify _redirects for client-side routing. Bundle: 325.81 kB (98.29 kB gzipped). Status: DEPLOYMENT ISSUES RESOLVED ✅ Netlify: READY FOR PRODUCTION

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>PRILABSA Framework - Solaria Agency</title>
+    <meta name="description" content="Modern, modular web framework for multi-client applications by Solaria Agency" />
+    <meta name="author" content="Solaria Agency" />
   </head>
   <body>
     <div id="root"></div>
